// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StandardModal /> should match snapshot with title and body 1`] = `
<body
  style="background-color: rgb(255, 255, 255); color: rgb(33, 35, 56); overflow: hidden;"
>
  <div />
  <div
    class="base position_fixed overflow_hidden root_default root_fadeIn"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="base position_absolute backdropRoot_default_base backdrop_root"
    />
    <div
      aria-hidden="false"
      class="base display_flex height_full center_mobile_base center_mobile_base container"
      role="none presentation"
    >
      <article
        aria-labelledby="od-4"
        aria-modal="true"
        class="base block 8_mobile_base display_flex backgroundColours_white_base column_mobile_base modal_base modalSizeStandard_base"
        role="dialog"
      >
        <header
          class="base block 6_mobile_base 5_mobile_base 6_mobile_base 5_mobile_base display_flex width_full position_relative border_style border_colour_top_light_base border_colour_right_light_base border_colour_bottom_light_base border_colour_left_light_base 1_mobile_base center_mobile_base header_base"
        >
          <button
            aria-label="close"
            class="base appearance cursorPointer button 5_mobile_base 5_mobile_base 5_mobile_base 5_mobile_base position_absolute headerCloseButton_base"
          >
            <i
              class="base display_block medium_mobile_base"
              role="presentation"
            >
              <svg
                class="base display_block width_full height_full"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M13.458 12L19 17.543V19h-1.457L12 13.457 6.458 19H5v-1.456L10.544 12 5 6.458V5h1.457L12 10.543 17.544 5H19v1.458L13.458 12z"
                />
              </svg>
            </i>
          </button>
          <div
            id="od-4"
          >
            <h4
              class="base root_base sizes_4_base colours_dark_base fontWeight_bold_base base"
            >
              Hello World!
            </h4>
          </div>
        </header>
        <main
          class="base height_full flexGrow_1 content"
        >
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis convallis neque a laoreet maximus. Vestibulum hendrerit quam at mi venenatis faucibus at vel nisi. In ut risus et ipsum tincidunt tempor. Suspendisse potenti. Praesent faucibus posuere risus, at congue mauris porttitor ut. Donec sit amet elit vitae purus dictum aliquet quis ut ligula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum dui sapien, porttitor ac erat vel, malesuada rutrum mauris. Nam arcu tellus, pretium ut aliquet eget, ultrices vel est. Maecenas dapibus volutpat eros a volutpat.
          </p>
        </main>
      </article>
    </div>
  </div>
</body>
`;

exports[`<StandardModal /> should match snapshot without title and body 1`] = `
<body
  style="background-color: rgb(255, 255, 255); color: rgb(33, 35, 56); overflow: hidden;"
>
  <div />
  <div
    class="base position_fixed overflow_hidden root_default root_fadeIn"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="base position_absolute backdropRoot_default_base backdrop_root"
    />
    <div
      aria-hidden="false"
      class="base display_flex height_full center_mobile_base center_mobile_base container"
      role="none presentation"
    >
      <article
        aria-labelledby="od-3"
        aria-modal="true"
        class="base block 8_mobile_base display_flex backgroundColours_white_base column_mobile_base modal_base modalSizeStandard_base"
        role="dialog"
      >
        <header
          class="base block 6_mobile_base 5_mobile_base 6_mobile_base 5_mobile_base display_flex width_full position_relative border_style border_colour_top_light_base border_colour_right_light_base border_colour_bottom_light_base border_colour_left_light_base 1_mobile_base center_mobile_base header_base"
        >
          <button
            aria-label="close"
            class="base appearance cursorPointer button 5_mobile_base 5_mobile_base 5_mobile_base 5_mobile_base position_absolute headerCloseButton_base"
          >
            <i
              class="base display_block medium_mobile_base"
              role="presentation"
            >
              <svg
                class="base display_block width_full height_full"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M13.458 12L19 17.543V19h-1.457L12 13.457 6.458 19H5v-1.456L10.544 12 5 6.458V5h1.457L12 10.543 17.544 5H19v1.458L13.458 12z"
                />
              </svg>
            </i>
          </button>
          <div
            id="od-3"
          >
            <h4
              class="base root_base sizes_4_base colours_dark_base fontWeight_bold_base base"
            />
          </div>
        </header>
        <main
          class="base height_full flexGrow_1 content"
        />
      </article>
    </div>
  </div>
</body>
`;
